<resources  xmlns:tools="http://schemas.android.com/tools"
            tools:ignore="MissingTranslation"
            tools:locale="en">
    <string name="app_name">CookAdvisor</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="add">NEW</string>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="start">START</string>
    <string name="reset_time">RESET</string>
    <string name="advice_label">Advice</string>
    <string name="no_advices">No advices</string>
    <string name="title_activity_edit" translatable="false">EditActivity</string>
    <string name="hours">HOUR</string>
    <string name="min">MIN</string>
    <string name="sec">SEC</string>
    <string name="title">Title:</string>
    <string name="save">SAVE</string>
    <string name="defvalue" translatable="false">00</string>
    <string name="hint_title">Please, insert title</string>
    <string name="hint_advice">Please, insert your advice</string>
    <string name="hint_data">Please, fill all fields!</string>
    <string name="hint_time">Please, insert valid time!</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="Delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="done">done!</string>
    <string name="is_preparing">is preparing</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8736916791817225/3904318797</string>
    <string name="pasta">Pasta</string>
    <string name="egg">egg</string>
    <string name="egg_soft">Egg soft-boiled</string>
    <string name="egg_medium">Egg medium-boiled</string>
    <string name="egg_hard">Egg hard-boiled</string>
    <string name="sausage">Sausage</string>
    <string name="rice">rice</string>
    <string name="white_rice">Rice white</string>
    <string name="brown_rice">Rice brown</string>
    <string name="corn">Corn</string>
    <string name="potato">Potato</string>
    <string name="carrot">Carrot</string>
    <string name="chicken">chicken</string>
    <string name="chicken_breasts">Chicken breasts</string>
    <string name="fish">Fish</string>
    <string name="porridge">Oatmeal (porridge)</string>
    <string name="rolled_oats">Oat Flakes (Rolled Oats)</string>
    <string name="oat">oat</string>
    <string name="ok" translatable="false">OK</string>
    <string name="peas">peas</string>
    <string name="peas_fresh">Peas fresh</string>
    <string name="peas_dried">Peas dried</string>
    <string name="beans">beans</string>
    <string name="dried_beans">Beans dried</string>
    <string name="beet">Beat</string>
    <string name="buckwheat">Buckwheat</string>
    <string name="advice_egg_soft">Soft-boiled egg - the white is solid, but the yolk is still runny. Gently lower the eggs into boiling water to cover them by about 1 inch. Add a little salt to the water - it helps to clean eggs from the shell. Set a timer! After timer ends, use a slotted spoon to transfer eggs to the cold bath and let them cool. Use the side of a small spoon to crack and remove the pointed end of the egg, making a hole in the shell large enough to fit the spoon. Or use egg scissors, if you have them. Serve in an egg cup for breakfast. Enjoy! :)</string>
    <string name="advice_egg_medium">Medium-boiled egg - the yolk is solid but still dark orange-yellow, moist, and dense in the middle. Beautiful and delicious quartered on a salad. Gently lower the eggs into boiling water to cover them by about 1 inch. Add a little salt to the water - it helps to clean eggs from the shell. Set a timer! After timer ends, use a slotted spoon to transfer eggs to the cold bath and let them cool. Softly tap the egg against the counter to crack the shell, carefully peel. If the shells are stubborn, try peeling them under running water. The fresher the egg, the more attached the shell, so for boiling, older eggs are preferable. Enjoy! :)</string>
    <string name="advice_egg_hard">Hard-boiled egg - the yolk is completely solid, light yellow, and crumbly, with no sign of the telltale green or gray ring around the yolk that is caused by overcooking. Perfect for egg salad or deviled eggs. Gently lower the eggs into boiling water to cover them by about 1 inch. Add a little salt to the water - it helps to clean eggs from the shell. Set a timer! After timer ends, use a slotted spoon to transfer eggs to the cold bath and let them cool. Softly tap the egg against the counter to crack the shell, carefully peel. If the shells are stubborn, try peeling them under running water. The fresher the egg, the more attached the shell, so for boiling, older eggs are preferable. Enjoy! :)</string>
    <string name="advice_pasta">Bring a large pot of well-salted water to a boil. Salt the water generously - only 10 percent of the salt in the cooking water will be absorbed. Boil the pasta according to package directions until al dente (generally it is about 10 minutes). Add a spoon of oil to the cooking water and keep stirring periodically to ensure even cooking and to keep pasta from clumping together or sticking to the bottom of the pot. To test a piece of pasta, remove it from the boiling water and bite into it to determine if it is done. Once cooked, drain it well and don\'t rinse. Shake the colander to remove any excess water. Rinsing will cool down the pasta, but it removes both the surface starch that keeps it firm and its essential nutrients. Only pasta for salad should be rinsed. Return the drained pasta to the still-warm cooking pot, and combine it with the sauce there to keep hot until ready to be served. Enjoy! :)</string>
    <string name="advice_sausage">Fill a large saucepan with enough water to cover sausages easily. For 4 sausages, 4 cups (about 1 liter) of water should be more than enough. Be sure to use a pan large enough so that the water falls at least a few inches below the rim. Place the sausages into boiling water. To prevent hot splashes, lower the sausages in one-by-one with a set of tongs or another long utensil. Don\'t drop them in. When all the sausages are in the water, turn the heat down so that the boiling reduces to a gentle simmer. Set a timer! After the sausages are finished boiling, remove them from hot water and put into the cold water for a second, then dry them off carefully with a paper towel. Serve the sausages with any combination of mustard, ketchup, relish, onion, tomato, cheese, or sauerkraut. Enjoy! :)</string>
    <string name="advice_rice">Wash and rinse the rice really well, until the water is clear. Drain. Place in a saucepan with double the amount of water and a little salt and stir once. For most rice, use a 1:2 ratio of one cup of rice to two cups of water . Measure a half cup of uncooked rice per person and scale this ratio up or down depending on how much you\'re making. Set a timer! Don\'t stir the rice throughout the cooking - it will make it stodgy. Don\'t cook the rice on too high a heat - it may stick and burn on the bottom before the rest of the rice is cooked. Cover the pot and turn the heat down to low. Don\'t take off the lid while the rice is cooking — this lets the steam out and affects the cooking time. When done, the rice will be firm but tender, and no longer crunchy. It is fine if it\'s slightly sticky but shouldn\'t be gummy. If there is still water left in the pan when the rice is done, tilt the pan to drain it off. Turn off the heat and let stand a few minutes, covered. This steams the rice just a little more. Remove the lid and fluff: Fluff the rice with a spoon or a fork, and let it sit for a few moments to "dry out" and lose that wet, just-steamed texture. Serve the rice: Leftover rice keeps well in the fridge for several days, so you can make extra ahead to serve later. Enjoy! :)</string>
    <string name="advice_corn">Shuck your corn husks, then rinse off the corn. Boil the Water. Drop the Corn in the Water: Carefully drop in freshly shucked corn into the boiling water. Poke the ears a little bit so each side gets covered in water. Cook the Corn: Cover the pot with a lid and lower heat to medium. Set a timer. Serve the Corn: Serve corn immediately with butter and salt. Enjoy! :)</string>
    <string name="advice_potato">You can boil potatoes either whole or cubed — both ways work fine. Make sure the whole  potatoes or cubed potatoes are roughly the same size. This way, they will all cook at the same rate. You can boil potatoes with their skins on or off. It\'s  very easy to peel off the skins after the potatoes are cooked. Cover the potatoes with an inch or two of cold water. Stir the salt into the water so that it dissolves. Set the pan over medium–high heat and bring the water to a boil. Once boiling, reduce the heat to a bare simmer to cook the potatoes. Set a timer! Cubed potatoes will cook more quickly than whole potatoes; smaller potatoes will cook more quickly than larger potatoes. Begin checking the potatoes after around 5 minutes of boiling; most potatoes will be done in 15–20 minutes. The potatoes are done when they are tender all the way through. You can test this by poking the potato with a fork. Drain the potatoes. Enjoy!</string>
    <string name="advice_carrot">A lot of the carrot\'s flavor and nutrients is near its surface. So often it\'s better just not to peel the carrot, and just wash it thoroughly. Place carrots in a pot of cold water: vegetables must be only little covered with water, to minimize nutrient loss. Set a timer. Bring the water to the boil. Cook, covered, until the carrots are as done as you like them. Try testing them with a fork. The fork should slide in easily enough. Drain the carrots. You can serve them as is, or with a bit of butter, salt, or other herbs and spices. Enjoy!</string>
    <string name="advice_chicken">If you are boiling a frozen chicken, make sure to the meat thaw prior to cooking. The liquid used to cook the chicken can be as simple as water, or chicken broth, apple cider, dry white wine, or a combination. Other ways to flavor the cooking liquid and the chicken include adding onion wedges, carrot pieces, celery pieces, garlic cloves, bouillon granules, herbs, salt, and lemon juice or peel. Take a pot with two-thirds of water or just enough liquid to cover the amount of meat you are going to cook. The amount of waiting time you will need depends on the chicken parts you are cooking. If you are cooking a whole, you may need an hour. For chicken breasts, 30 minutes may be good enough. If you are boiling smaller chicken parts such as wings or thighs, you will need to check at least every 15 minutes. When done, chicken should be white and be easily pulled apart with hands or a fork. Add boiled chicken to salads, stir-fries, or fajitas. Season as desired with salt, pepper, Italian herbs, or cooking sauces. Enjoy!</string>
</resources>