<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.vasiachess.cookadvisor.DetailActivity$PlaceholderFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Title"
        android:id="@+id/textViewTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="00:00:00"
        android:id="@+id/textViewTimer"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:inputType="time"
        android:textSize="50dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTimer"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:id="@+id/buttonStart"
        android:layout_marginTop="15dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/advice_label"
        android:id="@+id/textViewLabel"
        android:layout_below="@+id/buttonStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewLabel"
        android:layout_marginTop="5dp"
        android:layout_above="@+id/buttonEdit">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_advices"
            android:id="@+id/textViewAdvice" />
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/buttonEdit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
