
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vasiachess.cookadvisor.EditFragment" >

<RelativeLayout  android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/tvTitleLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTitle"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvTitleLabel"
        android:layout_toEndOf="@+id/tvTitleLabel"
        android:layout_marginLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/EditTextMain"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/editTextTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:layout_centerHorizontal="true"
                android:id="@+id/textViewHH"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="2"
                android:id="@+id/editTextHour"
                android:text="@string/defvalue"
                android:textAlignment="center"
                android:nestedScrollingEnabled="false"
                android:numeric="integer"
                android:maxLength="2"
                android:selectAllOnFocus="true"
                android:textStyle="bold"
                style="@style/EditTextMain"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/min"
                android:layout_centerHorizontal="true"
                android:id="@+id/textViewMin"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextMin"
                android:ems="2"
                android:inputType="number"
                android:layout_alignBottom="@+id/linearLayout"
                android:layout_alignRight="@+id/linearLayout"
                android:layout_alignEnd="@+id/linearLayout"
                android:text="@string/defvalue"
                android:textAlignment="center"
                android:maxLength="2"
                android:numeric="integer"
                android:selectAllOnFocus="true"
                android:textStyle="bold"
                style="@style/EditTextMain"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sec"
                android:layout_centerHorizontal="true"
                android:id="@+id/textViewSec"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="2"
                android:id="@+id/editTextSec"
                android:text="@string/defvalue"
                android:textAlignment="center"
                android:maxLength="2"
                android:numeric="integer"
                android:selectAllOnFocus="true"
                android:textStyle="bold"
                style="@style/EditTextMain"
                android:gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advice_label"
        android:id="@+id/tvAdviceLabel"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextAdvice"
        android:layout_below="@+id/tvAdviceLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_advice"
        android:elegantTextHeight="false"
        android:linksClickable="true"
        android:paddingLeft="15dp"
        style="@style/EditTextMain"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="top|left"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:layout_below="@+id/editTextAdvice"
        android:background="@drawable/selector_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
</ScrollView>